--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,35 @@
 
   <body>
 
-    
+<ul>
+      <li><a href="/users">All Users</a></li>
+
+      <li><a href="">All public okays</a> </li>
+
+
+      <% if session.fetch(:user_id) != nil %>
+        <li><a href="">My Okays</a></li>
+        <li><a href="/user_sign_out">Sign Out</a></li>
+      <% else %>
+        <li><a href="/user_sign_in">Sign In</a></li>
+        <li><a href="/user_sign_up">Sign Up</a> </li>
+      <% end %>
+      
+
+    </ul>
+
+    <% if alert.present? %>
+      <div style="border: thin red solid; color:red">
+        <%= alert%>
+    </div>
+    <% end %>
+
+
+    <% if notice.present? %>
+      <div style="border: thin green solid; color: green">
+        <%= notice%>
+      </div>
+    <% end %>
 
     <%= yield %>
   </body>
