Created a lot of the user page and okay creation function

--- a/app/views/okays/index.html.erb
+++ b/app/views/okays/index.html.erb
@@ -78,11 +78,11 @@
         </td>
 
         <td>
-          <%= okay.owner_id %>
+          <%= okay.poster %>
         </td>
 
         <td>
-          <%= okay.okay_or_not %>
+          <%= okay.parse_okay %>
         </td>
 
         <td>
