--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,12 @@
 <ul>
       <li><a href="/users">All Users</a></li>
 
-      <li><a href="">All public okays</a> </li>
+      <li><a href="/okays">All public okays</a> </li>
 
 
       <% if session.fetch(:user_id) != nil %>
-        <li><a href="">My Okays</a></li>
+        <li><a href="/users/">My Profile</a></li>
+        <li><a href="">My Follow Requests</a></li>
         <li><a href="/user_sign_out">Sign Out</a></li>
       <% else %>
         <li><a href="/user_sign_in">Sign In</a></li>
