--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
 
       <% if session.fetch(:user_id) != nil %>
-        <li><a href="/users/">My Profile</a></li>
+        <li><a href="/users/<%= @current_user.username %>">My Profile</a></li>
         <li><a href="">My Follow Requests</a></li>
         <li><a href="/user_sign_out">Sign Out</a></li>
       <% else %>
