Made some progress on the follow request but it does not work properly

--- a/app/views/follow_requests/index.html.erb
+++ b/app/views/follow_requests/index.html.erb
@@ -74,11 +74,11 @@
         </td>
 
         <td>
-          <%= follow_request.sender_id %>
+          <%= follow_request.sender %>
         </td>
 
         <td>
-          <%= follow_request.recipient_id %>
+          <%= follow_request.recipient %>
         </td>
 
         <td>
