Added more usability around followers

--- a/app/views/follow_requests/show.html.erb
+++ b/app/views/follow_requests/show.html.erb
@@ -23,14 +23,14 @@
         Sender
       </dt>
       <dd>
-        <%= @follow_request.sender_id %>
+        <%= @follow_request.sender %>
       </dd>
 
       <dt>
         Recipient
       </dt>
       <dd>
-        <%= @follow_request.recipient_id %>
+        <%= @follow_request.recipient %>
       </dd>
 
       <dt>
