--- a/app/views/okays/index.html.erb
+++ b/app/views/okays/index.html.erb
@@ -24,13 +24,13 @@
       </div>
 
       <div class="custom-control custom-checkbox mb-3">
-        <input type="checkbox" class="custom-control-input" id="okay_or_not_box" name="okay_or_not_from_query" value="1">
+        <input type="radio" class="custom-control-input" id="okay_or_not_box" name="okay_or_not_from_query" value="1">
 
         <label class="custom-control-label" for="okay_or_not_box">Okay</label>
       </div>
 
       <div class="custom-control custom-checkbox mb-3">
-        <input type="checkbox" class="custom-control-input" id="okay_or_not_box" name="okay_or_not_from_query" value="0">
+        <input type="radio" class="custom-control-input" id="okay_or_not_box" name="okay_or_not_from_query" value="0">
 
         <label class="custom-control-label" for="okay_or_not_box">Not Okay</label>
       </div>
