--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,10 @@
+<h1>Am I Okay?</h1>
+
+<p>
+Willkommen to Am I Okay? The innovative new platform that allows you to quickly notify family and friends how you are doing as you are traveling. Sick and tired of getting text messages from your mother when in a foreign country asking you how you're doing? I know I am. Now with Am I Okay?, you can send your loved ones a quick message to let them know how you are doing. Brought to you by <a href="©">Prestige Worldwide</a>
+</p>
+
+
 <h1>List of users</h1>
 
 <table border="1">
