--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,10 @@
     <dd><%= @user.id %></dd>
 
   <dt>Number of Followers</dt>
-    <dd><%= @user.followers %></dd>
+    <dd><%= @user.received_follow_requests.count %></dd>
+
+  <dt>Number of Following</dt>
+    <dd><%= @user.sent_follow_requests.count %></dd>
 
   <dt>Edit your username</dt>
 <% if session.fetch(:user_id) == @user.id %>
