--- a/app/views/follow_requests/users_follows.html.erb
+++ b/app/views/follow_requests/users_follows.html.erb
@@ -1,9 +1,8 @@
-<h1>My Followers</h1>
+<h1>People I Follow</h1>
 
-<hr>
 <div class="row mb-3">
   <div class="col-md-12">
-    <table class="table" border=1>
+    <table class="table">
       <tr>
         <th>
           ID
@@ -29,7 +28,7 @@
         </th>
       </tr>
 
-      <% @follow_request.each do |follow_request| %>
+      <% @follow_requests.each do |follow_request| %>
       <tr>
         <td>
           <%= follow_request.id %>
@@ -51,8 +50,8 @@
         </td>
 
         <td>
-          <a href="/delete_follow_request/<%= follow_request.id %>">
-            Remove Follower
+          <a href="/follow_requests/<%= follow_request.id %>">
+            Show details
           </a>
         </td>
       </tr>
@@ -60,6 +59,3 @@
     </table>
   </div>
 </div>
-
-<hr>
-
