--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FinalProject</title>
+    <title>Am I Okay?</title>
     <%= csrf_meta_tags %>
 
     <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
@@ -25,7 +25,7 @@
 
       <% if session.fetch(:user_id) != nil %>
         <li><a href="/users/<%= @current_user.username %>">Mein Profile</a></li>
-        <li><a href="/my_follow_requests/<%= session.fetch(:user_id) %>">Mein Follow Requests</a></li>
+        <li><a href="/my_follow_requests/<%= session.fetch(:user_id) %>">Mein Followers Requests</a></li>
         <li><a href="/user_sign_out">Sign Out</a></li>
       <% else %>
         <li><a href="/user_sign_in">Sign In</a></li>
@@ -58,6 +58,7 @@
   </body>
 
   <footer>
+  <hr>
   © <a href= "https://www.youtube.com/watch?v=ciS914MaDl8">Prestige Worldwide</a>
   </footer>
 </html>
