Updated  the ability to change okays, so that only the okay's user can do it

--- a/app/views/okays/show.html.erb
+++ b/app/views/okays/show.html.erb
@@ -11,11 +11,15 @@
         </a>
       </div>
 
-      <div class="col">
-        <a href="/delete_okay/<%= @okay.id %>" class="btn btn-block btn-outline-secondary">
-          Delete okay
-        </a>
-      </div>
+      <% if @okay.owner_id == session.fetch(:user_id) %>
+        <div class="col">
+          <a href="/delete_okay/<%= @okay.id %>" class="btn btn-block btn-outline-secondary">
+            Delete okay
+          </a>
+        </div>
+      <% else %>
+
+      <% end %>
     </div>
 
     <dl>
@@ -49,37 +53,4 @@
     </dl>
   </div>
 </div>
-
-<hr>
-
-
-<div class="row mb-3">
-  <div class="col-md-8 offset-md-2">
-    <h2>
-      Edit okay
-    </h2>
-
-    <form action="/modify_okay/<%= @okay.id %>"  method="post" >
-      <div class="form-group">
-        <label for="owner_id_box">
-          Owner
-        </label>
-
-        <input type="text" id="owner_id_box" name="owner_id_from_query" class="form-control" value="<%= @okay.owner_id %>">
-      </div>
-
-      <div class="custom-control custom-checkbox mb-3">
-        <input type="checkbox" class="custom-control-input" id="okay_or_not_box" name="okay_or_not_from_query" value="1" <%= "checked" if @okay.okay_or_not %>>
-
-        <label class="custom-control-label"
-          for="okay_or_not_box">Okay or not</label>
-      </div>
-
-      <button class="btn btn-block btn-outline-secondary">
-        Update okay
-      </button>
-    </form>
-  </div>
-</div>
-
 <hr>
